20160725: 0.9.1
	* slog_csoup.c: added slog_csoup_reach_level()

20160725: 0.9.0
	* slog_csoup.c: updated its interface so it can be reused by other
	projects, which make life easier and happier.

20160718: 0.8.20
	* smm_fstat.c: fixed the missing string.h
	Removed the temporary files in main/

20160718: 0.8.19
	* smm_fopen.c: better simulated the fopen().

20160715: 0.8.18
	* smm_fstat.c: added smm_fncmp() to support filename comparing
	* smm_rename.c: added to support UTF-16
	* smm_fopen.c: have NOT looked through the details

20160705: 0.8.17
	* csc_strinsert.c: introduced csc_strinsert() function.

20160701: 0.8.16
	* csc_strlcat.c: added for systems where no strlcat().
	* csc_cli_print.c: remove the size limit of printing comments
	* smm_alloc.c: smm_free() returns NULL;

20160622: 0.8.15
	* smm_userpath.c: added win32 include file Shlobj.h

20160617: 0.8.14
	* csc_path_path.c: fixed a bug that the trailing '/' was missing.

20160610: 0.8.13:
	* smm_userpath.c: added to support the user default directory.

20160610: 0.8.12:
	* csc_strbival.c: added to grab two integers from string like "100x20"
	
20160602: 0.8.11:
	* csc_cli_print.c: trimmed the output effect of the optional
	parameters, from "--help [ARGS]" to "--help=[OPTS]"
	* coo_frmwk.c: been removed from the main tests.

20151105: 0.8.10:
	* csc_strcmp_param.c: fixed the bug and added a test case in main.

20151104: 0.8.9:
	* csc_config.c: csc_cfg_mkdir() updated the cfg->update flag once an
	internal directory was created, which is not necessary. It caused
	ezthumb save its setting everytime even nothing was changed. Let the
	caller of csc_cfg_mkdir() decide to set the cfg->update or not.

20151021: 0.8.8:
	* csc_strcmp_param.c: added

20151020: 0.8.7
	* csc_strbody.c: do not calculate the length if len is NULL.

20150513: 0.8.6
	* smm_config.c: truncated the existed configure by CSC_CFG_RWC method,
	otherwise the contents would be overlapped with the previous contents.

20150424: 0.8.5